--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@ outputs:
 
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    description: "Theme PaperMod - https://github.com/SamirPaul1/blog"
+    description: "Technical blog made by developer for developers. Computer Science, Data Structures Algorithms, Networking, Artificial Intelligence and Coding Interview Prep."
     author: Samir Paul
     # author: ["Me", "You"] # multiple authors
 
