--- a/config.yml
+++ b/config.yml
@@ -77,7 +77,7 @@ params:
             - name: About Me
               url: about
             - name: Blog
-              url: archives
+              url: posts
 
     socialIcons:
         - name: GitHub
