--- a/config.yml
+++ b/config.yml
@@ -116,7 +116,7 @@ params:
 
 
     assets:
-        disableHLJS: true
+        # disableHLJS: true
     #     favicon: "<link / abs url>"
     #     favicon16x16: "<link / abs url>"
     #     favicon32x32: "<link / abs url>"
